ES|QL: Add temporality parameter to irate